<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="30dp"
    android:isScrollContainer="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        tools:context=".AlarmDetailsActivity" >

        <TimePicker
            android:id="@+id/alarmTimePicker"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarmTimePicker" />
        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/repeatAlarm" />
        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/chooseWord" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat"
            android:textStyle="bold"
            android:text="@string/details_repeat"
            android:layout_below="@id/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/repeat"
            android:id="@+id/repeatAlarm"
            android:weightSum="7">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Monday"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/details_monday"
                android:paddingRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:id="@+id/Tuesday"
                android:text="@string/details_tuesday"
                android:paddingRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:id="@+id/Wednesday"
                android:background="@drawable/button_background"
                android:text="@string/details_wednesday"
                android:paddingRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:id="@+id/Thursday"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/details_thursday"
                android:paddingRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:id="@+id/Friday"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/details_friday"
                android:paddingRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:id="@+id/Saturday"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/details_saturday"
                android:paddingRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:id="@+id/Sunday"
                android:text="@string/details_sunday"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:layout_below="@+id/divider3"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_label_tone"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alarm_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone_default"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/view_touch_selector"
            android:clickable="true"
            android:id="@+id/alarm_volume"
            android:layout_below="@+id/divider5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_volume"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_volume" />
        <View
            android:id="@+id/divider5"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/chooseWord"
            android:layout_below="@+id/divider1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Choose a Word"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="50dp"
                    android:text="..."
                    android:background="@drawable/button_background"
                    android:id="@+id/btnChooseWord"
                    android:textStyle="bold" />
                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="8">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:textSize="15dp"
                        android:id="@+id/alarmWord"
                        android:text="Your Word Here"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/colorAccent"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>